--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jquery": "^3.5.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.18.1",
+    "vue-localstorage": "^0.6.2",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
