--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "core-js": "^3.6.4",
     "jquery": "^3.5.0",
     "popper.js": "^1.16.1",
+    "qrcode.vue": "^1.7.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.18.1",
     "vue-localstorage": "^0.6.2",
+    "vue-qrcode-component": "^2.1.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
