--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "jquery": "^3.5.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
+    "vue-ctk-date-time-picker": "^2.5.0",
     "vue-i18n": "^8.18.1",
     "vue-localstorage": "^0.6.2",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
