--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
 # Todas las variables de entorno deben empezar con 'VUE_APP' para ser detectadas
 VUE_APP_DESAPP_ROOT_API=https://secret-plains-01193.herokuapp.com/api
+
+VUE_APP_GOOGLE_AUTH_URL = https://secret-plains-01193.herokuapp.com/api/oauth2/authorize/google?redirect_uri=https://pacific-cove-71520.herokuapp.com/oauth2/redirect
