--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-i18n": "^8.18.1",
     "vue-localstorage": "^0.6.2",
     "vue-moment": "^4.1.0",
+    "vue-paginate": "^3.6.0",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
